--- a/C19V/templates/vc_home.html
+++ b/C19V/templates/vc_home.html
@@ -94,6 +94,8 @@
             {{person.active_time_to}}
           </div>
         </div>
+        <hr>
+        <button><a href="{% url 'edit_profile' person.id %}">Edit Profile</a></button>
       </div>
     </div>
   </div>  
