--- a/C19V/templates/nearbyvc.html
+++ b/C19V/templates/nearbyvc.html
@@ -18,6 +18,13 @@
 
 <body style="background-color: black;">
     <h1 style="text-align: center;background-color:black;color:white;margin-top: 0.5%;margin-bottom: 0.5%;"><b>NearbyVaccination Centres</b></h1>
+    <form action="" method="GET">
+        <div class="search-container" style="text-align: center;margin-right: 35px;margin-bottom: 10px;">
+        <label for="name"><strong class='text-white'>City:&nbsp</strong></label>
+        {{filter.form.city}}				
+            <button class="btn btn-dark  btn-sm pd" type="search" style="margin-bottom: 5px;"><b>Search&nbsp<i class="fa fa-search"></i></b></button>
+        </div>
+    </form>
     <div id="scr" style="width:25%;height:690px;border-left:solid 8px;border-radius: 5px ;border-color:#666666;float:left;background-color: black;float:left; max-height: 50%;
     overflow-y: scroll;">
         <h1 style="text-align: center;background-color: black;color:aliceblue;border-top: solid 5px #666666;"><b>Vaccination Centres</b></h1>
