deleted unneccessary css js files

--- a/C19V/templates/home.html
+++ b/C19V/templates/home.html
@@ -12,7 +12,7 @@
 </head>
 <body onresize='_pexresize()'>
 	<canvas id='canvas' width='1280' height='720'></canvas><br><br>
-  <button type="button" class="btn btn-outline-dark btn-block" style="color:white;font-family: sans-serif;border:8px solid white;"><h2><b>Get-Started with C-19 Vaccine</b></h2></button><br>
+  <button type="button" class="btn btn-outline-dark btn-block" style="color:white;font-family: sans-serif;border:8px solid white;"><a class='text-white' href="{% url 'login' %}"><h2><b>Get-Started with C-19 Vaccine</b></h2></a></button><br>
   <h6 style="text-align: center;color:white;">Copyright &copy; 2021 C-19 Vaccine.All Rights Reserved.</h6>
   <style>
     body {background:#111;margin:0;padding:0}
