--- a/C19V/templates/home.html
+++ b/C19V/templates/home.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/f8b62a635e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -12,7 +13,8 @@
 </head>
 <body onresize='_pexresize()'>
 	<canvas id='canvas' width='1280' height='720'></canvas><br><br>
-  <button type="button" class="btn btn-outline-dark btn-block" style="color:white;font-family: sans-serif;border:8px solid white;"><a class='text-white' href="{% url 'login' %}"><h2><b>Get-Started with C-19 Vaccine</b></h2></a></button><br>
+  <button type="button" class="btn btn-outline-dark btn-block" style="color:white;font-family: sans-serif;border:8px solid white;"><a style="color: #0060B6;
+    text-decoration: none;"class='text-white' href="{% url 'login' %}"><h2><b>Get-Started with C-19 Vaccine &nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-arrow-alt-circle-right"></i></b></h2></a></button><br>
   <h6 style="text-align: center;color:white;">Copyright &copy; 2021 C-19 Vaccine.All Rights Reserved.</h6>
   <style>
     body {background:#111;margin:0;padding:0}
