--- a/C19V/templates/nearbyvc.html
+++ b/C19V/templates/nearbyvc.html
@@ -74,7 +74,7 @@
     </div>
     
     <div id="googleMap" style="width:75%;height:690px;float:right;"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRY_Rg4W_hjC8S-HcEFrHJuoOhneSm3oc&callback=initMap&libraries=&v=weekly" async defer ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRY_Rg4W_hjC8S-HcEFrHJuoOhneSm3oc&callback=myMap&libraries=&v=weekly" async defer ></script>
 </body>
 
 </html>
