added related icons and modified bs4 in templates

--- a/C19V/templates/statistics.html
+++ b/C19V/templates/statistics.html
@@ -8,7 +8,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="{% static '/js/statistics.js' %}"></script>
 <div class="container" style="font-family: sans-serif;"><br>
-    <h1 class="text-center">Statistics</h1><br>
+    <h1 class="text-center"><b>Statistics <i class="fas fa-chart-line"></i></b></h1><br>
 
     <form method='GET'>
         <table class="table table-dark table-striped">
@@ -31,7 +31,7 @@
                         <label for="end_date">Date-To :</label>
                         {{filter.form.end_date}}
                     </td>
-                    <td><div style="margin-left:17%;"><input type='submit' name='Submit' value="Search" style="width:190px"></input></div>
+                    <td><div style="margin-left:17%;"><input type='submit' name='Submit' value="Search " style="width:190px"></input></div>
                     </td>
                 </tr></tbody></table>
     </form>
