--- a/C19V/templates/patient_login.html
+++ b/C19V/templates/patient_login.html
@@ -18,7 +18,7 @@
   <div class="container" style="margin-top:3%;width:30%;font-family:sans-serif;">
     <div class="row">
       <div class="col-4 mx-auto text-center">
-        <img src="{% static '/images/corona1.jpeg' %}" class="rounded-circle" alt="Corona1" width="150" height="150">
+        <img src="{% static '/images/pat.png' %}" class="rounded-circle" alt="Corona1" width="150" height="150">
       </div>
     </div>
     
@@ -52,14 +52,14 @@
           <label><input type="checkbox">Remember me </label>
         </div>
         <button type="submit" style="background-color:black;" class="btn btn btn-primary">
-          Log In
+          <b>Log In</b>
         </button>
       </form>
       {% for mess in messages %}
       <p>{{mess}}</p>
       {% endfor %}
       <h3>Not yet Vaccinated?</h3>
-      <a href="{% url 'nearbyvc' %}" style="background-color:#696969;"class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
+      <a href="{% url 'nearbyvc' %}" style="background-color:#696969;"class="btn btn-lg btn-info btn-block"><b>NearBy Vaccination Centre <i style="font-size:20px;" class="fas fa-hospital"></i></b></a>
     </div>
     
   </div>
