--- a/C19V/templates/vc_home.html
+++ b/C19V/templates/vc_home.html
@@ -18,7 +18,7 @@
             
           </div>
           <button class="btn btn-dark" style="float:right"><a style="color:white;
-    text-decoration: none;"href="{% url 'edit_profile' person.id %}"><b>Edit Profile</b></a></button>
+    text-decoration: none;"href="{% url 'edit_profile' person.id %}"><b>Edit Profile &nbsp;<i class="fas fa-pencil-alt"></i></b></a></button>
         </div>
         <div class="row">
           <div class="col-sm-3">
