--- a/C19V/templates/vc_login.html
+++ b/C19V/templates/vc_login.html
@@ -17,7 +17,7 @@
   <div class="container" style="margin-top:3%;width:30%;font-family:sans-serif;">
     <div class="row">
       <div class="col-4 mx-auto text-center">
-        <img src="{% static '/images/corona1.jpeg' %}" class="rounded-circle" alt="Corona1" width="150" height="150">
+        <img src="{% static '/images/doc.png' %}" class="rounded-circle" alt="Corona1" width="150" height="150">
       </div>
     </div>
     <div class="row">
