--- a/C19V/templates/vc_report.html
+++ b/C19V/templates/vc_report.html
@@ -77,7 +77,7 @@
 		<h5>LAST 5 Vaccinated people</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-dark  btn-sm btn-block" href="{% url 'register' person.id %}">Add a Person</a>
+			<a class="btn btn-dark  btn-sm btn-block" href="{% url 'register' person.id %}"><b>Add a Person &nbsp;<i class="fas fa-user-friends"></i></b></a>
 			<table class="table table-sm">
 				<tr>
 					<th>Name</th>
@@ -97,7 +97,7 @@
                         <td>{{patient.phone_no}}</td>
                         <td>{{patient.date_created | date}}</td>
 						<td>{{patient.date_created | time}}</td>
-						<td><a class="btn btn-sm btn-info" href="{% url 'update_person' person.id patient.id %}" >Update</a></td>
+						<td><a class="btn btn-sm btn-info" href="{% url 'update_person' person.id patient.id %}" >Update &nbsp;<i class="fas fa-pencil-alt"></i></a></td>
 					</tr>
 				{% endfor %}
 			</table>
