changed addfaq styling as plus

--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -58,7 +58,7 @@
 <br>
 {% if User == 'VC' %}
 <div style="text-align: center;"><button type="button" class="btn btn-dark">
-    <a href="{% url 'add_faq' person.id %}" style="color:white;text-decoration: none;"><b>Add Faq &nbsp;<i class="fas fa-pencil-alt"></i></b></a>
+    <a href="{% url 'add_faq' person.id %}" style="color:white;text-decoration: none;"><b>Add Faq &nbsp;<i class="fas fa-plus"></i></b></a>
 </button></div>
 <script>
     function openForm() {
