Added image for  patient_register page

--- a/C19V/templates/patient_register.html
+++ b/C19V/templates/patient_register.html
@@ -6,7 +6,7 @@
   <div class="container" style="text-align:center;font-family: sans-serif;"><br>
     <div class="row">
         <div class="col-4 mx-auto text-center">
-            <img src="{% static '/images/person.png' %}" class="rounded-circle" alt="Corona1" width="100" height="100">
+            <img src="{% static '/images/pat.png' %}" class="rounded-circle" alt="Corona1" width="150" height="150">
         </div>
     </div>
     <form action='' method='POST'>
