--- a/C19V/templates/faq.html
+++ b/C19V/templates/faq.html
@@ -27,10 +27,10 @@
                     <a href="{% url 'update_faq' person.id faq.id %}" style="color:black;text-decoration: none;"><b>Update Faq &nbsp;<i class="fas fa-pencil-alt"></i></b></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark btn-sm"
-                    style="float:right;margin-right: 1%;margin-top:1%;" onclick="openForm()">
+                    style="float:right;margin-right: 1%;margin-top:1%;" onclick="openForm(parseInt('{{forloop.counter}}'))">
                     <b>Delete Faq &nbsp;<i class="fas fa-trash-alt"></i></b>
                 </button>
-                <div class="form-popup" id="myForm" style="margin-right: 38%;margin-bottom:20%;border-style: double;background-color: black;color:aliceblue;border-radius:5px;"><i class="fas fa-times" onclick="closeForm()" style="position: absolute;margin-top:1%;margin-right: 1%;
+                <div class="myForm form-popup"  style="margin-right: 38%;margin-bottom:20%;border-style: double;background-color: black;color:aliceblue;border-radius:5px;"><i class="fas fa-times" onclick="closeForm()" style="position: absolute;margin-top:1%;margin-right: 1%;
                  right:0px;"></i><br>
                     <p style="font-weight: bold;">&nbsp;&nbsp; Are you sure you want to delete this FAQ?&nbsp;&nbsp;</p>
                     <p>&nbsp;&nbsp;&nbsp;{{faq.question}}</p>
@@ -44,10 +44,8 @@
                                 <input type="text" name="id" value={{faq.id}}>
                             </div>
                         </form>
-                        <button class="btn btn-dark btn-block" onclick="closeForm()" style="width:90%;margin-left: 5%;margin-bottom: 4%;margin-top: 2%;"><b>Cancel</b></button>
-
+                        <button class="btn btn-dark btn-block" onclick="closeForm(parseInt('{{forloop.counter}}'))" style="width:90%;margin-left: 5%;margin-bottom: 4%;margin-top: 2%;"><b>Cancel</b></button>
                     </div>
-                   
                 </div>
                 {% endif %}
             </div>
@@ -61,12 +59,12 @@
     <a href="{% url 'add_faq' person.id %}" style="color:white;text-decoration: none;"><b>Add Faq &nbsp;<i class="fas fa-plus"></i></b></a>
 </button></div>
 <script>
-    function openForm() {
-        document.getElementById("myForm").style.display = "block";
+    function openForm(n) {
+        document.getElementsByClassName("myForm")[n-1].style.display = "block";
     }
 
-    function closeForm() {
-        document.getElementById("myForm").style.display = "none";
+    function closeForm(n) {
+        document.getElementsByClassName("myForm")[n-1].style.display = "none";
     }
 </script>
 {%  else  %}
